--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             flex-direction: column;
             align-items: center;
             padding: 0 20px 80px;
-            max-width: 1200px;
+            max-width: 1100px;
             margin: 0 auto;
             width: 100%;
         }
@@ -348,6 +348,17 @@
             font-style: italic;
         }
 
+        .usage-disclaimer {
+            margin-top: 20px;
+            font-size: 0.65rem;
+            color: var(--text-dim);
+            text-align: center;
+            opacity: 0.8;
+            line-height: 1.4;
+            padding: 0 10px;
+        }
+        .usage-disclaimer b { color: var(--neon-blue); }
+
         .side-panel { display: flex; flex-direction: column; gap: 25px; }
 
         .history-card {
@@ -401,7 +412,22 @@
         .scroll-top { position: fixed; bottom: 30px; right: 30px; background: var(--card-bg); border: 1px solid var(--border); width: 50px; height: 50px; border-radius: 50%; display: flex; align-items: center; justify-content: center; cursor: pointer; opacity: 0; transition: 0.3s; z-index: 1000; }
         .scroll-top.visible { opacity: 1; }
 
-        footer { padding: 80px 20px; text-align: center; border-top: 1px solid var(--border); margin-top: 60px; font-size: 0.8rem; color: #777; }
+        /* FULL PAGE DISCLAIMER STYLING */
+        .page-disclaimer-box {
+            max-width: 1100px;
+            margin: 40px auto 0;
+            padding: 30px;
+            background: var(--card-bg);
+            border: 1px solid var(--border);
+            border-radius: 20px;
+            font-size: 0.8rem;
+            color: var(--text-dim);
+            line-height: 1.6;
+        }
+        .page-disclaimer-box h4 { margin: 0 0 10px 0; color: var(--text-main); text-transform: uppercase; letter-spacing: 1px; font-size: 0.75rem; }
+        .page-disclaimer-box p { margin-bottom: 10px; }
+
+        footer { padding: 40px 20px 80px; text-align: center; font-size: 0.8rem; color: #777; border-top: none; }
 
         @media (max-width: 900px) { .layout-wrapper { grid-template-columns: 1fr; } .category-grid { grid-template-columns: repeat(5, 1fr); } }
         @media (max-width: 600px) { .form-row { flex-direction: column; align-items: stretch; } .swap-btn { width: 50px; height: 50px; transform: rotate(90deg); align-self: center; margin: 10px 0; } .category-grid { grid-template-columns: repeat(3, 1fr); } #resultValue { font-size: 3.5rem; } }
@@ -487,6 +513,10 @@
                         </div>
                     </div>
 
+                    <div class="usage-disclaimer">
+                        <b>Quick Disclaimer:</b> Standard NIST constants applied. Verify critical data independently.
+                    </div>
+
                     <div class="formula-box" id="formulaDisplay">
                         <div id="formulaText">Calculating...</div>
                     </div>
@@ -517,6 +547,14 @@
             <h2 id="deepDiveTitle">Professional Guide to Unit Conversion</h2>
             <div id="deepDiveContent">Precision Units is built using the SI standard and verified constants.</div>
         </article>
+
+        <!-- NEW: COMPREHENSIVE PAGE DISCLAIMER SECTION -->
+        <section class="page-disclaimer-box">
+            <h4>Full Usage Disclaimer</h4>
+            <p>The information provided by the <b>Precision Units</b> tool is for general informational purposes only. All mathematical calculations and unit conversion factors are based on the National Institute of Standards and Technology (NIST) Special Publication 811. While we strive to maintain the highest level of accuracy, results should be independently verified for critical applications, including but not limited to engineering projects, scientific research, medical dosing, or industrial manufacturing.</p>
+            <p><b>Currency Conversion:</b> Exchange rates are sourced via third-party financial data providers. These rates are mid-market benchmark rates and do not represent the rate you may receive from a financial institution or money transfer service. <b>unitconverter.live</b> is not responsible for any financial decisions or losses incurred based on the data provided by this application.</p>
+            <p>By using this website, you acknowledge that any reliance on the information provided is at your own risk. This service is provided "as is" without any warranties of any kind.</p>
+        </section>
     </main>
 
     <div class="toast" id="toast">Copied!</div>
@@ -524,6 +562,11 @@
 
     <footer>
         <p>&copy; 2026 unitconverter.live | NIST SP811 Standards Compliant</p>
+        <p style="margin-top: 10px; opacity: 0.6;">
+            <a href="#" style="color:inherit; text-decoration:none;">Privacy Policy</a> &bull; 
+            <a href="#" style="color:inherit; text-decoration:none;">Terms of Service</a> &bull; 
+            <a href="#" style="color:inherit; text-decoration:none;">Contact</a>
+        </p>
     </footer>
 
     <script>
