--- a/index.html
+++ b/index.html
@@ -432,6 +432,8 @@
         @media (max-width: 900px) { .layout-wrapper { grid-template-columns: 1fr; } .category-grid { grid-template-columns: repeat(5, 1fr); } }
         @media (max-width: 600px) { .form-row { flex-direction: column; align-items: stretch; } .swap-btn { width: 50px; height: 50px; transform: rotate(90deg); align-self: center; margin: 10px 0; } .category-grid { grid-template-columns: repeat(3, 1fr); } #resultValue { font-size: 3.5rem; } }
     </style>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8521045409318181"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -784,4 +786,5 @@
         window.onload = init;
     </script>
 </body>
+
 </html>
